--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,76 @@ body {
   font-size: 14px;
   line-height: 24px;
   text-transform: uppercase;
-  color: #000000;
+  color: #f7f4f1;
+  background-color: #070707;
+  background-image: url("../img/main-bg.jpg");
+}
+
+.inner-page {
+  background-color: #f8f5f2;
+  background-image: url("../img/item-bg.png");
+}
+
+.clearfix {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.main-header {
+  margin-bottom: 60px;
+  background-color: #000000;
+}
+
+.main-header-inner {
+  margin-bottom: 55px;
+  background-color: #000000;
+}
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.page-navigation {
+  float: left;
+  width: 780px;
+}
+
+.page-navigation ul li {
+  display: inline-block;
+}
+
+.page-navigation a {
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-right: 40px;
+}
+
+.auth-block {
+  float: right;
+  width: 140px;
+}
+
+.auth-block a {
+  display: block;
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-top: 25px;
+  padding-left: 70px;
+}
+
+.main-logo {
+  width: 368px;
+  height: 204px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 25px;
 }
 
 h1 {
@@ -15,4 +84,190 @@ h1 {
 h2 {
   font-size: 24px;
   line-height: 42px;
+}
+
+.promo-block {
+  float: left;
+  width: 300px;
+  margin-right: 20px;
+  margin-bottom: 80px;
+}
+
+.promo-block:last-child {
+  margin-right: 0;
+}
+
+.main-content {
+  padding: 50px 80px;
+
+}
+
+.main-content-left {
+  float: left;
+  width: 330px;
+}
+
+.main-content-right {
+  float: left;
+  width: 300px;
+}
+
+.footer {
+  margin-top: 60px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  background-color: #000000;
+  background-image: url("../img/footer-bg.png");
+}
+
+.footer-contacts {
+  float: left;
+  width: 320px;
+  margin-right: 60px;
+}
+
+.footer-social {
+  float: left;
+  width: 180px;
+}
+
+.footer-copyright {
+  float: right;
+  width: 180px;
+}
+
+.inner-logo {
+  float: left;
+  width: 111px;
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-right: 20px;
+}
+
+.main-title {
+  float: left;
+  margin-bottom: 20px;
+  color: #000000;
+}
+
+.page-navigation-inner {
+  float: left;
+  width: 620px;
+}
+
+.page-navigation-inner ul li {
+  display: inline-block;
+}
+
+.page-navigation-inner a {
+  display: block;
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-top: 15px;
+  padding-left: 40px;
+}
+
+.breadcrumbs {
+  float: left;
+  margin-top: 10px;
+  margin-bottom: 50px;
+  padding-left: 0;
+}
+
+.breadcrumbs li {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 0;
+  padding-right: 40px;
+  padding-left: 0;
+  vertical-align: top;
+}
+
+.disabled {
+  color: #aba9a7;
+}
+
+.breadcrumbs a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.filter-form {
+  float: left;
+  width: 220px;
+  margin-right: 20px;
+
+}
+fieldset {
+  color: #000000;
+}
+legend {
+  font-size: 24px;
+  color: #000000;
+}
+
+.main-gallery-photo {
+  margin-bottom: 20px;
+}
+
+.main-gallery-photo img {
+
+  width: 460px;
+  height: 500px;
+  margin: 0;
+}
+
+.small-gallery-photo a {
+  display: inline-block;
+  width: 140px;
+  height: 140px;
+  vertical-align: top;
+  text-decoration: none;
+
+}
+
+.small-gallery-photo a:nth-child(2) {
+  margin: 0 20px;
+}
+
+.small-gallery-photo img {
+  width: 140px;
+  height: 140px;
+}
+
+.shop-tems {
+  float: right;
+  width: 700px;
+}
+
+.item-card {
+  float: left;
+  width: 220px;
+  height: 285px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  background-color: #ffffff;
+}
+.item-card:nth-child(3) {
+  margin-right: 0;
+}
+.item-card:last-child {
+  margin-right: 0;
+}
+
+.pager li {
+  display: inline-block;
+}
+
+.single-item {
+  color: #000000;
+  margin-right: 90px;
+}
+
+.item-gallery {
+  float: left;
+  width: 460px;
+
 }
