--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,31 @@ body {
   background: #242424;
 }
 
+.page-navigation-inner .active {
+  position: relative;
+  background-color: none;
+}
+
+.page-navigation-inner .active::after {
+  content: "";
+  position: absolute;
+  right: 20px;
+  bottom: 0;
+  left: 20px;
+  height: 5px;
+  background-color: none;
+}
+
+.page-navigation-inner .active a:hover {
+  background: none;
+}
+
+.page-navigation-inner .active span {
+  display: block;
+  padding: 20px 20px;
+  color: #ffffff;
+}
+
 .auth-block {
   float: right;
   max-width: 140px;
@@ -454,6 +479,7 @@ padding: 0;
 }
 
 .breadcrumbs li {
+  position: relative;
   display: inline-block;
 }
 
@@ -465,8 +491,27 @@ padding: 0;
   padding-right: 40px;
 }
 
+.breadcrumbs a:hover {
+  text-decoration: underline;
+}
+
 .breadcrumbs .disabled {
   color: #aba9a7;
+}
+
+.breadcrumbs li::after {
+  content: "";
+  position: absolute;
+  top: 6px;
+  right: 15px;
+  width: 8px;
+  height: 8px;
+  background-color: #000000;
+  transform: rotate(45deg);
+}
+
+.breadcrumbs .disabled::after {
+  display: none;
 }
 
 fieldset {
@@ -706,4 +751,110 @@ a.card-btn:active {
   padding-left: 20px;
   background: url("../img/sprite.png") no-repeat center;
   background-position: 0 -1041px;
+}
+
+.inner-content {
+  margin-bottom: 75px;
+}
+
+.inner-content p {
+  margin: 14px 0;
+}
+
+.inner-content table {
+  border-collapse: collapse;
+}
+
+.inner-content td {
+  padding: 10px 15px;
+  border: 2px solid #000000;
+}
+
+.big-heading {
+  margin-top: 55px;
+  margin-bottom: 65px;
+  text-align: center;
+}
+
+.big-heading h2 {
+  position: relative;
+  display: inline;
+  z-index: 2;
+  margin: 0;
+  padding: 0 25px;
+  font-size: 48px;
+  line-height: 48px;
+  text-align: center;
+  background: #f8f3f0 url("../img/item-bg.png") repeat;
+}
+
+.big-heading::after {
+  content: "";
+  position: relative;
+  display: block;
+  top: -28px;
+  z-index: 1;
+  border-bottom: 2px solid #000000;
+}
+
+.custom-list-1 {
+  margin: 14px 0;
+  padding: 0;
+  list-style: none;
+}
+
+.custom-list-1 li {
+  position: relative;
+  margin-bottom: 15px;
+  padding-left: 20px;
+}
+
+.custom-list-1 li::before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 0;
+  width: 8px;
+  height: 8px;
+  background-color: #000000;
+  transform: rotate(45deg);
+}
+
+.prices-table {
+  width: 100%;
+}
+
+.prices-table td {
+  width: 50%;
+}
+
+.prices-table td:last-child {
+  text-align: center;
+}
+
+.inner-column-left,
+.inner-column-right {
+  width: 460px;
+}
+
+.inner-column-left {
+  float: left;
+}
+
+.inner-column-right {
+  float: right;
+}
+
+.inner-columns {
+  margin: 60px 0;
+}
+
+.inner-column-left *:first-child,
+.inner-column-right *:first-child {
+  margin-top: 0;
+}
+
+.inner-column-left *:last-child,
+.inner-column-right *:last-child {
+  margin-bottom: 0;
 }
